[gd_scene load_steps=38 format=3 uid="uid://b123vpsid3sm7"]

[ext_resource type="Theme" uid="uid://sovx87ibyj4c" path="res://assets/main_menu_theme.tres" id="2_g6l72"]
[ext_resource type="PackedScene" uid="uid://2qrkim6a88ak" path="res://island.tscn" id="3_77qc4"]
[ext_resource type="FontFile" uid="uid://dkg8f55oxda1r" path="res://assets/font/FuturaPTCondMediumOblique.otf" id="3_fsxv1"]
[ext_resource type="Shader" path="res://crosshair.gdshader" id="3_tljlx"]
[ext_resource type="Theme" uid="uid://dhx7dfl8ee5s0" path="res://assets/main_ui.tres" id="4_5ot53"]
[ext_resource type="Texture2D" uid="uid://bgflvqy0nd5cm" path="res://assets/item-icons/Empty.svg" id="5_356re"]
[ext_resource type="Texture2D" uid="uid://c3jaqob2wi661" path="res://assets/crosshairs/crosshair_0.svg" id="6_03ab2"]
[ext_resource type="Script" path="res://world.gd" id="7_jxrkp"]
[ext_resource type="Texture2D" uid="uid://b06mga5yc2omg" path="res://assets/ui_progress.svg" id="7_pn65w"]
[ext_resource type="Texture2D" uid="uid://j6mf77n85ela" path="res://assets/ui_progress_back.svg" id="8_fml53"]
[ext_resource type="Script" path="res://addons/markdownlabel/markdownlabel.gd" id="11_oh6fw"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="12_t2o3w"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="13_ioqi1"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="14_bs2jc"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="15_yg6yb"]
[ext_resource type="Shader" path="res://blur.gdshader" id="16_8hiy6"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="16_c0hnu"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="17_ncqv2"]
[ext_resource type="Texture2D" uid="uid://dvhqp2skpx7o2" path="res://assets/textures/floor_main.svg" id="18_8ioej"]
[ext_resource type="PackedScene" uid="uid://dyh8jwg5l2jnq" path="res://scenes/the_source.tscn" id="20_lnld5"]
[ext_resource type="VoxelGIData" uid="uid://dhvtcybwyw23q" path="res://world.VoxelGI_data.res" id="21_vwnxt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_guau5"]
shader = ExtResource("3_tljlx")

[sub_resource type="Resource" id="Resource_qp6da"]
resource_local_to_scene = true
script = ExtResource("12_t2o3w")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_dcowp"]
resource_local_to_scene = true
script = ExtResource("13_ioqi1")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_dme5t"]
resource_local_to_scene = true
script = ExtResource("14_bs2jc")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_318g5"]
resource_local_to_scene = true
script = ExtResource("15_yg6yb")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_phxbb"]
resource_local_to_scene = true
script = ExtResource("16_c0hnu")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_jtglo"]
resource_local_to_scene = true
script = ExtResource("17_ncqv2")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ghdm"]
shader = ExtResource("16_8hiy6")
shader_parameter/blur_amount = 1.0
shader_parameter/mix_amount = null
shader_parameter/color_over = Color(0, 0, 0, 0.298039)

[sub_resource type="CanvasTexture" id="CanvasTexture_pj1ah"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_n27i4"]
sky_horizon_color = Color(0.636446, 0.656637, 0.692402, 1)
ground_bottom_color = Color(0.266667, 0.286275, 0.352941, 1)
ground_horizon_color = Color(0.636446, 0.656637, 0.692402, 1)

[sub_resource type="Sky" id="Sky_n410l"]
sky_material = SubResource("ProceduralSkyMaterial_n27i4")

[sub_resource type="Environment" id="Environment_ql11f"]
background_mode = 2
sky = SubResource("Sky_n410l")
tonemap_mode = 3
ssr_max_steps = 128
ssr_depth_tolerance = 128.0
glow_enabled = true
fog_enabled = true
fog_sky_affect = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_866tl"]
size = Vector3(4, 0.5, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_van5e"]
albedo_texture = ExtResource("18_8ioej")
metallic = 0.65
roughness = 0.5
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_4f0gl"]
size = Vector3(4, 0.5, 4)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_us82r"]

[node name="World" type="Node"]
script = ExtResource("7_jxrkp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = 144.0
offset_right = -256.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g6l72")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_g6l72")
theme_override_fonts/font = ExtResource("3_fsxv1")
theme_override_font_sizes/font_size = 64
text = "Operation: Sky"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEntry" type="LineEdit" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"
alignment = 1

[node name="Server" type="HBoxContainer" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer/Server"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer/Server"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/VBoxContainer/Server"]
layout_mode = 2
size_flags_horizontal = 3
text = "localhost"
placeholder_text = "127.0.0.1"
alignment = 1

[node name="PortEntry" type="SpinBox" parent="CanvasLayer/MainMenu/VBoxContainer/Server"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1024.0
max_value = 65535.0
value = 9999.0
alignment = 1

[node name="UpnpToggle" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "UPNP"

[node name="SettingsButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_5ot53")

[node name="Hotbar" type="HBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -64.0
offset_right = 168.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="1" type="TextureRect" parent="CanvasLayer/HUD/Hotbar"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("5_356re")

[node name="2" type="TextureRect" parent="CanvasLayer/HUD/Hotbar"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("5_356re")

[node name="3" type="TextureRect" parent="CanvasLayer/HUD/Hotbar"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("5_356re")

[node name="4" type="TextureRect" parent="CanvasLayer/HUD/Hotbar"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("5_356re")

[node name="5" type="TextureRect" parent="CanvasLayer/HUD/Hotbar"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("5_356re")

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/HUD"]
material = SubResource("ShaderMaterial_guau5")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_03ab2")
expand_mode = 1

[node name="Quickbar" type="ScrollContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD/Quickbar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/HUD/Quickbar/HBoxContainer"]
custom_minimum_size = Vector2(184, 0)
layout_mode = 2
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 16
stretch_margin_top = 16
stretch_margin_right = 16
stretch_margin_bottom = 16
texture_under = ExtResource("7_pn65w")
texture_over = ExtResource("8_fml53")
texture_progress = ExtResource("7_pn65w")
tint_under = Color(1, 0.376471, 0.376471, 1)
tint_progress = Color(0.501961, 1, 0.376471, 1)

[node name="Label" type="Label" parent="CanvasLayer/HUD/Quickbar/HBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100∕100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="TabContainer" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.198
anchor_right = 0.778
anchor_bottom = 0.79
offset_left = 0.255981
offset_top = -0.304016
offset_right = -0.256042
offset_bottom = 0.0799866
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_5ot53")
current_tab = 0

[node name="Stats" type="ScrollContainer" parent="CanvasLayer/HUD/Inventory"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/Inventory/Stats"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/HUD/Inventory/Stats/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Upgrades" type="HBoxContainer" parent="CanvasLayer/HUD/Inventory"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 1

[node name="Upgrades" type="ScrollContainer" parent="CanvasLayer/HUD/Inventory/Upgrades"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/Inventory/Upgrades/Upgrades"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/HUD/Inventory/Upgrades/Upgrades/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/Inventory/Upgrades"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HUD/Inventory/Upgrades/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
script = ExtResource("11_oh6fw")
h1 = SubResource("Resource_qp6da")
h2 = SubResource("Resource_dcowp")
h3 = SubResource("Resource_dme5t")
h4 = SubResource("Resource_318g5")
h5 = SubResource("Resource_phxbb")
h6 = SubResource("Resource_jtglo")

[node name="Pause" type="Control" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g6l72")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD/Pause"]
visible = false
material = SubResource("ShaderMaterial_7ghdm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_pj1ah")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/Pause"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/HUD/Pause/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="CanvasLayer/HUD/Pause/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Disconnect" type="Button" parent="CanvasLayer/HUD/Pause/VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="Settings" type="TabContainer" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.198
anchor_right = 0.778
anchor_bottom = 0.79
offset_left = 0.255981
offset_top = -0.304016
offset_right = -0.256042
offset_bottom = 0.0799866
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_5ot53")
current_tab = 0

[node name="Audio" type="ScrollContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/Audio"]
layout_mode = 2

[node name="Video" type="ScrollContainer" parent="CanvasLayer/Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/Video"]
layout_mode = 2

[node name="Controls" type="ScrollContainer" parent="CanvasLayer/Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/Controls"]
layout_mode = 2

[node name="Multiplayer" type="ScrollContainer" parent="CanvasLayer/Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/Multiplayer"]
layout_mode = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ql11f")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Island" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Island"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("BoxShape3D_866tl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Island"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
material_override = SubResource("StandardMaterial3D_van5e")
mesh = SubResource("BoxMesh_4f0gl")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn", "res://scenes/dropped_stat.tscn")
spawn_path = NodePath("..")

[node name="Island2" parent="." instance=ExtResource("3_77qc4")]
visible = false

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 10, 10)
fov = 90.0

[node name="The Source" parent="." instance=ExtResource("20_lnld5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_us82r")

[node name="VoxelGI" type="VoxelGI" parent="."]
size = Vector3(4, 4, 4)
data = ExtResource("21_vwnxt")

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Server/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Server/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
